modules.scss: minor update to fix text resizing issues on iphone

--- a/styles/modules.scss
+++ b/styles/modules.scss
@@ -15,6 +15,7 @@
 				}
 				h1{
 					position: absolute;
+					-webkit-text-size-adjust: 100%;
 				}
 			}
 			.module-content{
